applications/health-service/kustomize/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: health-service
    labels:
        app: health-service
        version: v1
        service: health-service
spec:
    replicas: 1
    selector:
        matchLabels:
            app: health-service
            version: v1
            service: health-service
    template:
        metadata:
            labels:
                app: health-service
                version: v1
                service: health-service
                sidecar.istio.io/inject: "true"
        spec:
            serviceAccountName: health-service
            containers:
                -   name: health-service
                    livenessProbe:
                        httpGet:
                            port: 8080
                            path: /health
                        initialDelaySeconds: 5
                        periodSeconds: 30
                    image: service:latest
                    imagePullPolicy: Always
                    ports:
                        -   containerPort: 8080
