applications/health-service/kustomize/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: health-service # health-service.<namespace>.svc.cluster.local
    labels:
        app: health-service
        service: health-service
spec:
    selector:
        app: health-service
    ports:
        -   port: 8080
            targetPort: 8080
            name: http
