applications/health-service/kustomize/base/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
    name: health-service-destination-rule
spec:
    host: health-service # health-service.<namespace>.svc.cluster.local
    subsets:
        -   name: v1
            labels:
                version: v1
